# WisecondorX

./: .dockerignore  Dockerfile  README.md  Step1.sh  Step3.sh  conda.yml  install_wisecondorx_fork.sh  launch_script_wisecondorx_step1.sh  launch_script_wisecondorx_step3.sh  pyproject.toml  script_merge-abberant-file.sh
.github/workflows/: docker-publish.yml
src/wisecondorx/: main.py  overall_tools.py  predict_control.py  predict_output.py  predict_tools.py
src/wisecondorx/include/: CBS.R
